--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-		<div class="container-fluid">
+		<div class="container">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="#">Filtr</a>
 			</div>
@@ -21,26 +21,13 @@
 		<div ng-controller="ProfanityController">
 		<h2>Profanities</h2>
 			<div class="row">
-				<div class="col-md-4">
-					<form role="form">
-						<div class="form-group">
-							<label for="exampleInputPassword1">Password</label> <input
-								type="password" class="form-control" id="exampleInputPassword1"
-								placeholder="Name">
-						</div>
-						<button type="submit" class="btn btn-default">Submit</button>
-					</form>
-				</div>
 				<div class="col-md-8">
 					<ul class="list-group">
 						<li class="list-group-item"
 							ng-repeat="profanity in profanities | orderBy:'id'">{{profanity.name}}</li>
 						<li class="list-group-item">
-							<a><span class="glyphicon glyphicon-plus"></span></a>
-							<form ng-submit="ProfanityController.addProfanity(newProfanity)" role="form">
-								<div>
-								    <input ng-model="ProfanityController.newProfanity.name" type="text" class="form-control no-border" placeholder="New Profanity">
-								</div>
+							<form ng-submit="ProfanityController.addProfanity(newProfanity)" role="form" class="test">
+							    <input ng-model="newProfanity.name" type="text" class="form-control no-border" placeholder="New Profanity">
 							</form>
 						</li>
 					</ul>
