--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <html ng-app='filtr'>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<link rel="icon" href="/filtr/img/favicon.ico" type="image/x-icon" />
 <link rel="stylesheet" href="/filtr/css/bootstrap.css" />
 <link rel="stylesheet" href="/filtr/css/style.css" />
 <script src="/filtr/js/angular.js"></script>
@@ -44,7 +45,7 @@
 				<h2>Add Profanities</h2>
 					<ul class="list-group">
 						<li class="list-group-item"
-							ng-repeat="profanity in allProfanities">{{profanity.name}}<button ng-click="delete(profanity)" class="btn glyphicon glyphicon-remove"></button></li>
+							ng-repeat="profanity in excludedProfanities"><a ng-click="addToList(profanity)">{{profanity.name}}</a><button ng-click="delete(profanity)" class="btn glyphicon glyphicon-remove"></button></li>
 						<li class="list-group-item">
 							<form role="form">
 								<button ng-click="addProfanity(newProfanity)" class="btn glyphicon glyphicon-plus"></button>
